# MCP-Tools

./: ollama_tets.ipynb  pyproject.toml  qdrant.py
Excel-agent/: analysis_dashboard.html  main.py
Web-Search/: .gitignore  Dockerfile  Dockerfile.dev  README.md  agent.py  agent_mem.py  agent_old.py  db_inspect.py  langraph-test.ipynb  main.py  mem-diag.py  playground.py  requirements.txt  server.py
Web-Search/Agent-API/: .env.example  Dockerfile  README.md  STATUS.md  agent_api.db  docker-compose.yml  pyproject.toml  test_api.py
Web-Search/Agent-API/agents/: __init__.py  enhanced_agent.py  search_tools.py
Web-Search/Agent-API/api/: __init__.py  main.py
Web-Search/Agent-API/db/: __init__.py  database.py  models.py
Web-Search/Agent-API/scripts/: init_db.py  requirements_generator.py  run_server.py
Web-Search/agent-ui/: package-lock.json
Web-Search/data/: research_agent.db
